/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */


option java_package = "org.apache.tajo.ipc";
option java_outer_classname = "TajoResourceTrackerProtocol";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

import "TajoMasterProtocol.proto";

message NodeHeartbeat {
  required string tajoWorkerHost = 1;
  required int32 peerRpcPort = 2;
  required int32 tajoQueryMasterPort = 3;
  optional ServerStatusProto serverStatus = 4;
  optional int32 tajoWorkerClientPort = 5;
  optional string statusMessage = 6;
  optional int32 tajoWorkerPullServerPort = 7;
  optional int32 tajoWorkerHttpPort = 8;
}

service TajoResourceTrackerProtocolService {
  rpc heartbeat(NodeHeartbeat) returns (TajoHeartbeatResponse);
}